--- a/simple-oauth2-client/src/main/resources/templates/secure.html
+++ b/simple-oauth2-client/src/main/resources/templates/secure.html
@@ -9,11 +9,13 @@
 
 <body>
 
-<h1>Spring Security OAuth Example - Secured</h1>
+<h1>Secured Page</h1>
 
-Welcome to TechPrimers!
+Welcome to Webisite!
 
-<span th:text="${#authentication.name}"></span>
+Welcome, <span th:text="${#authentication.name}">Name</span>
+<br/>
+Your authorities are <span th:text="${#authentication.authorities}">authorities</span>
 </body>
 
 </html>
